--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,217 +1,242 @@
-name: Nightly Release Build
+name: Rust Nightly Release
 
+# 优化后的触发条件 - 确保标签格式匹配
 on:
   push:
     tags:
-      - 'v*' # 触发条件：推送到v开头的tag时
+      - 'v[0-9]+.[0-9]+.[0-9]+'  # 匹配语义化版本标签 (v1.0.0)
+      - 'v[0-9]+.[0-9]+'          # 匹配简化版本标签 (v1.0)
+  workflow_dispatch:
+    inputs:
+      version:
+        description: '手动指定版本号 (例如 1.0.0)'
+        required: true
+        default: '1.0.0'
 
+# 添加调试信息输出
 env:
-  PROJECT_NAME: myapp
-  BUILD_DATE: ${{ github.event.head_commit.timestamp }}
+  PROJECT_NAME: nexus_client
+  DEBUG_MODE: true
 
 jobs:
-  create-release:
-    name: Create Release
+  show_context:
+    name: Show Trigger Context
+    runs-on: ubuntu-latest
+    steps:
+      - name: Dump GitHub Context
+        run: |
+          echo "Event: ${{ github.event_name }}"
+          echo "Ref: ${{ github.ref }}"
+          echo "Ref type: ${{ github.ref_type }}"
+          echo "Ref name: ${{ github.ref_name }}"
+          
+          echo "HEAD commit:"
+          git log -1 --pretty=oneline
+          
+          echo "All tags:"
+          git tag --list
+
+  build_prep:
+    name: Prepare Build
     runs-on: ubuntu-latest
     outputs:
-      release_id: ${{ steps.create_release.outputs.id }}
-      upload_url: ${{ steps.create_release.outputs.upload_url }}
-
+      version_tag: ${{ steps.extract_version.outputs.version }}
+      build_date: ${{ steps.set_date.outputs.build_date }}
     steps:
-      - name: Create Release
-        id: create_release
-        uses: softprops/action-gh-release@v1
+      - name: Checkout repository
+        uses: actions/checkout@v4
         with:
-          tag_name: ${{ github.ref_name }}
-          name: "${{ env.PROJECT_NAME }} ${{ github.ref_name }}"
-          body: |
-            Built with Rust nightly
-            Build date: ${{ env.BUILD_DATE }}
-          draft: false
-          prerelease: false
+          fetch-depth: 0  # 获取完整历史记录（包括标签）
+          
+      - name: Extract version from tag
+        id: extract_version
+        run: |
+          TAG_NAME="${{ github.ref_name }}"
+          # 处理v前缀
+          VERSION=${TAG_NAME#v}
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
+          
+          # 输出用于调试
+          echo "Tag name: $TAG_NAME"
+          echo "Extracted version: $VERSION"
+          
+      - name: Set build date
+        id: set_date
+        run: |
+          BUILD_DATE=$(date -u +'%Y-%m-%dT%H:%M:%SZ')
+          echo "build_date=$BUILD_DATE" >> $GITHUB_OUTPUT
+          
+      - name: Prepare build info
+        run: |
+          echo "Project: ${{ env.PROJECT_NAME }}" > build-info.txt
+          echo "Version: ${{ steps.extract_version.outputs.version }}" >> build-info.txt
+          echo "Build date: ${{ steps.set_date.outputs.build_date }}" >> build-info.txt
+          echo "Git commit: ${{ github.sha }}" >> build-info.txt
+          echo "Triggered by: ${{ github.actor }}" >> build-info.txt
+          
+      - uses: actions/upload-artifact@v3
+        with:
+          name: build-info
+          path: build-info.txt
 
   build:
-    name: Build for ${{ matrix.target }} (${{ matrix.rust_target }})
+    name: Build for ${{ matrix.target }}
     runs-on: ${{ matrix.os }}
-    needs: create-release
+    needs: [show_context, build_prep]
     strategy:
+      fail-fast: false
       matrix:
         include:
-          # Linux 目标 (动态链接)
+          # Linux 目标
           - target: linux-gnu
             rust_target: x86_64-unknown-linux-gnu
             os: ubuntu-22.04
-            bin_name: ${{ env.PROJECT_NAME }}-linux-x64
-            artifact_name: linux-gnu
-
-          # Linux 目标 (静态链接)
+            bin_suffix: linux
+          
           - target: linux-musl
             rust_target: x86_64-unknown-linux-musl
             os: ubuntu-22.04
-            bin_name: ${{ env.PROJECT_NAME }}-linux-static
-            artifact_name: linux-musl
+            bin_suffix: linux-static
             extra_packages: musl-tools
-
+            
           # Windows 目标
-          - target: win-msvc
+          - target: windows
             rust_target: x86_64-pc-windows-msvc
             os: windows-latest
-            bin_name: ${{ env.PROJECT_NAME }}-windows.exe
-            artifact_name: windows
-            extra_actions: |
-              choco install -y llvm # 为链接器提供支持
-
-          # macOS Intel 目标
+            bin_suffix: windows.exe
+          
+          # macOS 目标
           - target: macos-intel
             rust_target: x86_64-apple-darwin
             os: macos-12
-            bin_name: ${{ env.PROJECT_NAME }}-macos-intel
-            artifact_name: macos-intel
-
-          # macOS ARM 目标
+            bin_suffix: macos-intel
+            
           - target: macos-arm
             rust_target: aarch64-apple-darwin
             os: macos-12
-            bin_name: ${{ env.PROJECT_NAME }}-macos-arm
-            artifact_name: macos-arm
-
+            bin_suffix: macos-arm
+    
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
         
+      - name: Download build info
+        uses: actions/download-artifact@v3
+        with:
+          name: build-info
+          
       - name: Install system dependencies
-        if: ${{ matrix.extra_packages || matrix.extra_actions }}
+        if: matrix.extra_packages || matrix.target == 'macos-intel' || matrix.target == 'macos-arm'
         run: |
+          echo "Installing dependencies for ${{ matrix.target }}..."
+          
+          # Linux 特定的依赖
           if [[ "${{ runner.os }}" == "Linux" && "${{ matrix.extra_packages }}" ]]; then
             sudo apt-get update
             sudo apt-get install -y ${{ matrix.extra_packages }}
           fi
           
+          # macOS 依赖
           if [[ "${{ runner.os }}" == "macOS" ]]; then
-            # macOS 可能需要特定依赖
-            brew install llvm || true
+            brew update
+            brew install llvm || echo "LLVM already installed"
           fi
           
-          ${{ matrix.extra_actions }}
-
-      - name: Install nightly Rust
+          # Windows 依赖
+          if [[ "${{ runner.os }}" == "Windows" ]]; then
+            choco install llvm
+          fi
+          
+      - name: Install Rust nightly
         uses: actions-rs/toolchain@v1
         with:
           toolchain: nightly
           components: rust-src, rustc-dev, llvm-tools-preview
           target: ${{ matrix.rust_target }}
           override: true
-
-      - name: Configure Cargo
-        shell: bash
-        run: |
-          if [ "${{ matrix.target }}" = "linux-musl" ]; then
-            echo "Configuring for static linking"
-            echo "RUSTFLAGS='-C target-feature=+crt-static'" >> $GITHUB_ENV
-            echo "CARGO_PROFILE_RELEASE_LTO = 'fat'" >> .cargo/config.toml
-            echo "CARGO_PROFILE_RELEASE_PANIC = 'abort'" >> .cargo/config.toml
-          fi
+          profile: minimal
           
-          # 启用 Z 卷压缩（文件体积优化）
-          echo "CARGO_PROFILE_RELEASE_CODEGEN_UNITS = 1" >> .cargo/config.toml
-          echo "CARGO_PROFILE_RELEASE_STRIP = true" >> .cargo/config.toml
-
-      - name: Build Release
-        env:
-          RUST_BACKTRACE: full
-          RUSTC_WRAPPER: sccache
+      - name: Build release
         run: |
-          cargo +nightly build \
-            --release \
-            --target ${{ matrix.rust_target }} \
-            -Z build-std=std,panic_abort \
-            -Z build-std-features=panic_immediate_abort
+          # 显示环境信息用于调试
+          rustc -Vv
+          cargo -V
           
-          # 使用 LLVM 工具减小文件大小
+          # 构建项目
+          cargo build --release --target ${{ matrix.rust_target }}
+          
+          # 减小文件大小
           if command -v llvm-strip &> /dev/null; then
-            llvm-strip --strip-unneeded \
-              target/${{ matrix.rust_target }}/release/${{ env.PROJECT_NAME }}${{ format('{0}', '.exe') }}
+            llvm-strip target/${{ matrix.rust_target }}/release/${{ env.PROJECT_NAME }}*
           fi
-
-      - name: Prepare Artifact
-        shell: bash
+          
+      - name: Prepare artifact
         run: |
           BIN_PATH="target/${{ matrix.rust_target }}/release/${{ env.PROJECT_NAME }}"
+          OUTPUT_NAME="${{ env.PROJECT_NAME }}-${{ matrix.bin_suffix }}"
           
-          if [ "${{ runner.os }}" = "Windows" ]; then
-            mv "$BIN_PATH.exe" ${{ matrix.bin_name }}
+          if [ "${{ runner.os }}" == "Windows" ]; then
+            cp "$BIN_PATH.exe" "$OUTPUT_NAME"
           else
-            mv "$BIN_PATH" ${{ matrix.bin_name }}
+            cp "$BIN_PATH" "$OUTPUT_NAME"
           fi
           
-          # 添加构建信息
-          sha256sum ${{ matrix.bin_name }} > ${{ matrix.bin_name }}.sha256
-          echo "Build date: ${{ env.BUILD_DATE }}" >> build-info.txt
-          echo "Target: ${{ matrix.rust_target }}" >> build-info.txt
-          echo "Rust version: $(cargo -V)" >> build-info.txt
-
-      - name: Upload Artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: ${{ matrix.artifact_name }}
-          path: |
-            ${{ matrix.bin_name }}
-            ${{ matrix.bin_name }}.sha256
-            build-info.txt
-
-  upload-release:
-    name: Publish Release Assets
-    runs-on: ubuntu-latest
-    needs: [create-release, build]
-    strategy:
-      matrix:
-        artifacts: [linux-gnu, linux-musl, windows, macos-intel, macos-arm]
+          # 生成校验和
+          sha256sum "$OUTPUT_NAME" > "$OUTPUT_NAME.sha256"
+          
+          # 输出调试信息
+          echo "Bin path: $BIN_PATH"
+          echo "Output name: $OUTPUT_NAME"
+          ls -lh "$OUTPUT_NAME"
         
+      - uses: actions/upload-artifact@v3
+        with:
+          name: ${{ matrix.target }}-binary
+          path: |
+            ${{ env.PROJECT_NAME }}-${{ matrix.bin_suffix }}
+            ${{ env.PROJECT_NAME }}-${{ matrix.bin_suffix }}.sha256
+
+  create_release:
+    name: Create GitHub Release
+    runs-on: ubuntu-latest
+    needs: build
     steps:
-      - name: Download all artifacts
+      - name: Download build info
+        uses: actions/download-artifact@v3
+        with:
+          name: build-info
+          
+      - name: Download all binaries
         uses: actions/download-artifact@v3
         with:
           path: artifacts
+          pattern: '*-binary'
+          merge-multiple: true
           
-      - name: Package macOS Universal Binary
-        if: ${{ matrix.artifacts == 'macos-intel' }}
-        run: |
-          # 合并 intel 和 arm 二进制
-          lipo -create \
-            artifacts/macos-intel/${{ env.PROJECT_NAME }}-macos-intel \
-            artifacts/macos-arm/${{ env.PROJECT_NAME }}-macos-arm \
-            -output ${{ env.PROJECT_NAME }}-macos-universal
-          
-          sha256sum ${{ env.PROJECT_NAME }}-macos-universal > ${{ env.PROJECT_NAME }}-macos-universal.sha256
-
-      - name: Upload all assets
+      - name: Create release
         uses: softprops/action-gh-release@v1
         with:
-          release_id: ${{ needs.create-release.outputs.release_id }}
+          tag_name: ${{ github.ref }}
+          name: "Release ${{ needs.build_prep.outputs.version_tag }}"
+          body: |
+            # ${{ env.PROJECT_NAME }} ${{ needs.build_prep.outputs.version_tag }}
+            
+            Built with Rust nightly
+            Build date: ${{ needs.build_prep.outputs.build_date }}
+            
+            ## Downloads
+            - Linux (glibc): ${{ env.PROJECT_NAME }}-linux
+            - Linux (static): ${{ env.PROJECT_NAME }}-linux-static
+            - Windows: ${{ env.PROJECT_NAME }}-windows.exe
+            - macOS Intel: ${{ env.PROJECT_NAME }}-macos-intel
+            - macOS ARM: ${{ env.PROJECT_NAME }}-macos-arm
+            
+          draft: false
+          prerelease: false
           files: |
-            artifacts/linux-gnu/${{ env.PROJECT_NAME }}-linux-x64
-            artifacts/linux-gnu/${{ env.PROJECT_NAME }}-linux-x64.sha256
-            artifacts/linux-musl/${{ env.PROJECT_NAME }}-linux-static
-            artifacts/linux-musl/${{ env.PROJECT_NAME }}-linux-static.sha256
-            artifacts/windows/${{ env.PROJECT_NAME }}-windows.exe
-            artifacts/windows/${{ env.PROJECT_NAME }}-windows.exe.sha256
-            ${{ env.PROJECT_NAME }}-macos-universal
-            ${{ env.PROJECT_NAME }}-macos-universal.sha256
-            artifacts/macos-intel/build-info.txt
-          
-      - name: Upload version info
-        run: |
-          echo "## Build Details" > details.md
-          cat artifacts/*/build-info.txt >> details.md
-          echo "\n### SHA256 Checksums" >> details.md
-          cat *.*sha256 >> details.md
-          
-        shell: bash
-        working-directory: artifacts
-
-      - name: Update release description
-        uses: mtsmfm/update-release@v1
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          release_id: ${{ needs.create-release.outputs.release_id }}
-          body_path: artifacts/details.md
+            artifacts/*.sha256
+            artifacts/linux-gnu-binary/${{ env.PROJECT_NAME }}-linux
+            artifacts/linux-musl-binary/${{ env.PROJECT_NAME }}-linux-static
+            artifacts/windows-binary/${{ env.PROJECT_NAME }}-windows.exe
+            artifacts/macos-intel-binary/${{ env.PROJECT_NAME }}-macos-intel
+            artifacts/macos-arm-binary/${{ env.PROJECT_NAME }}-macos-arm
